site design tested

--- a/website/website/src_html/account/index.html
+++ b/website/website/src_html/account/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <table align = 'center' style="text-align:center"><tr><td>
-        <h3>Персональная информация</h3>
-        <p>Имя пользователя: {{ user_name }}</p>
-    <td><tr><table>
+    <div class="item_8">
+        <table align = 'center' style="text-align:center"><tr><td>
+            <h3>Персональная информация</h3>
+            <p>Имя пользователя: {{ user_name }}</p>
+        <td><tr><table>
+    </div>
 
 {% endblock %}
